# ports/domain/dto/sign_in_dto.go
@@ -8,7 +8,6 @@ type (
 	}
 
 	SignInResponse struct {
-		Username      string    `json:"username"`
-		Password     string    `json:"password"`
+		Token      string    `json:"token"`
 	}
 )
